# calculation

./: Cargo.toml  README.md
src/: error.rs  expression.rs  lexer.rs  lib.rs  operator.rs  parser.rs  token.rs
tests/: evaluate_test.rs
